<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="16dp"
    android:elevation="16dp"
    app:cardCornerRadius="10dp"
    style="@style/AppTheme.Card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/name"
            style="@style/AppTheme.Text.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/indicator"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Adjudicator Rick" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/indicator"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_green_indicator"
            app:layout_constraintBottom_toTopOf="@+id/lastKnowLocationTV"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/status"
            style="@style/AppTheme.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/indicator"
            app:layout_constraintStart_toEndOf="@+id/indicator"
            app:layout_constraintTop_toTopOf="@+id/indicator"
            tools:text="Alive" />

        <TextView
            android:id="@+id/hyphen"
            style="@style/AppTheme.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/hyphen"
            app:layout_constraintBottom_toBottomOf="@+id/indicator"
            app:layout_constraintStart_toEndOf="@+id/status"
            app:layout_constraintTop_toTopOf="@+id/indicator" />

        <TextView
            android:id="@+id/species"
            style="@style/AppTheme.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/indicator"
            app:layout_constraintStart_toEndOf="@+id/hyphen"
            app:layout_constraintTop_toTopOf="@+id/indicator"
            tools:text="Human" />

        <TextView
            android:id="@+id/lastKnowLocationTV"
            style="@style/AppTheme.Text.Auxiliary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_know_location"
            app:layout_constraintBottom_toTopOf="@+id/location"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/indicator" />

        <TextView
            android:id="@+id/location"
            style="@style/AppTheme.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/firstSeenInTV"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@+id/lastKnowLocationTV"
            tools:text="Citadel of Ricks" />

        <TextView
            android:id="@+id/firstSeenInTV"
            style="@style/AppTheme.Text.Auxiliary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/first_seen_in"
            app:layout_constraintBottom_toTopOf="@+id/episode"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/episode"
            style="@style/AppTheme.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@+id/firstSeenInTV"
            tools:text="The Ricklantis Mixup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>